syntax = "proto3";
package raft;
option go_package = "./raftpb";

enum PeerState{
    UNKNOWN = 0;
    LEADER = 1;
    FOLLOWER = 2;
    CANDIDATE = 3;
}

message LogEntry{
    bytes Command = 1;
    int64 Term = 2;
    int64 index = 3;
}

message RequestVoteArgs {
    int64 Term = 1;
    int64 CandidateId = 2;
    int64 LastLogIndex = 3;
    int64 LastLogTerm = 4;
}
message RequestVoteReply {
    int64 Term = 1;
    bool VoteGranted = 2;
}

message AppendEntriesArgs{
    int64 Term = 1;
    int64 LeaderId = 2;
    int64 PrevLogIndex = 3;
    int64 PrevLogTerm = 4;
    repeated LogEntry Entries = 5;
    int64 LeaderCommit = 6;
}
message AppendEntriesReply{
    int64 Term = 1;
    bool Success = 2;
    int64 ConflictIndex = 3;
    int64 ConflictTerm = 4;
}

message InstallSnapshotArgs {
    int64 Term = 1;
    int64 leaderId = 2;
    int64 LastIncludedIndex = 3;
    int64 LastIncludedTerm = 4;
    bytes Data = 5;
}
message InstallSnapshotReply {
    int64 Term = 1;
}

message RaftState {
    int64 CurrentTerm = 1;
    int64 VotedFor = 2;
}
message SnapshotState{
    int64 LastIncludedIndex = 1;
    int64 LastIncludedTerm = 2;
}
message FullSnapshot{
    SnapshotState metadata = 1;
    bytes data = 2;
}
 service Raft {
    rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
    rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
    rpc InstallSnapshot(InstallSnapshotArgs) returns (InstallSnapshotReply);
}